--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.26.0",
@@ -31,12 +34,19 @@
   "dependencies": {
     "express": "^4.16.4",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "webmidi": "^2.3.0"
   },
   "babel": {
     "presets": [
       "env",
+      "es2015",
+      "es2016",
+      "es2017",
       "react"
+    ],
+    "plugins": [
+      "transform-class-properties"
     ]
   }
 }
