--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --mode development --open --hot",
     "start": "node server.js",
     "build": "webpack --mode production",
+    "install": "webpack --progress --config ./webpack.production.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/mcwissink/the-peoples-piano#readme",
   "devDependencies": {
+    "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -28,7 +30,9 @@
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.25.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^1.0.0",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
