--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.16.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "webmidi": "^2.3.0"
   },
   "babel": {
