--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "http": "0.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "soundfont-player": "^0.11.0",
-    "webmidi": "^2.3.0"
+    "webmidi": "^2.3.0",
+    "ws": "^6.1.2"
   },
   "babel": {
     "presets": [
