--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.25.0",
     "html-webpack-plugin": "^3.2.0",
+    "mongodb": "^2.2.11",
     "postcss-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
