--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bad-words": "^3.0.0",
     "express": "^4.16.4",
     "http": "0.0.0",
+    "midi-sounds-react": "^1.2.54",
     "mongodb": "^2.2.11",
     "pixi.js": "^4.8.2",
     "randomcolor": "^0.5.3",
@@ -52,7 +53,6 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "socket.io": "^2.2.0",
-    "soundfont-player": "^0.11.0",
     "webmidi": "^2.3.0"
   },
   "babel": {
